--- a/profile-svc/package.json
+++ b/profile-svc/package.json
@@ -11,7 +11,9 @@
   "license": "ISC",
   "type": "module",
   "dependencies": {
+    "bcrypt": "^5.1.0",
     "commander": "^9.5.0",
+    "cors": "^2.8.5",
     "express": "^4.18.2",
     "knex": "^2.4.1",
     "mysql": "^2.18.1"
