--- a/attendance-svc/package.json
+++ b/attendance-svc/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "type": "module",
   "dependencies": {
+    "axios": "^1.2.5",
     "commander": "^9.5.0",
     "express": "^4.18.2",
     "knex": "^2.4.1",
