--- a/attendance-svc/package.json
+++ b/attendance-svc/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "axios": "^1.2.5",
     "commander": "^9.5.0",
+    "cors": "^2.8.5",
     "express": "^4.18.2",
     "knex": "^2.4.1",
     "mysql": "^2.18.1"
